--- a/0316practice/小組練習.html
+++ b/0316practice/小組練習.html
@@ -19,8 +19,8 @@ body {background-color: powderblue;}
 <h2 style="color:blue;">請各位留下你們的資料</h2>
 
 <div class="city">
-  <h2>組長</h2>
-  <p>自我介紹: 杜哲宇</p>
+  <h2>杜哲宇</h2>
+  <p>自我介紹: 我叫小宇，我不會唱小宇的歌。</p>
   <p>興趣: 唱歌、跳舞、聊天、看電影、玩手機、寫程式、寫網頁、寫功課、上網頁設計課</p>
   <table style="width:100%">
   <tr>
